--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,17 @@
          <version>0.5-SNAPSHOT</version>
          <type>jar</type>
           </dependency>
-            
+        <dependency>
+            <groupId>dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>1.6.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.12.4</version>
+            <scope>provided</scope>
+        </dependency>
 	</dependencies>
 
 	<build>
