--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,7 +2,7 @@ name: Rixor
 main: com.projectrixor.rixor.scrimmage.Scrimmage
 version: 1.2
 depend: [WorldEdit]
-author: [ParaPenguin, MasterEjzz, ShinyDialga45]
+author: ProjectRixor Team
 load: STARTUP
 commands:
   setteam:
